Istio/shared-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: shared-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.example.com" # Wildcard for multi domain
    - "harbor.doamin.local"
    - "websocket-test.example.local"
    - "kiali.local"
