Istio/vir_kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts:
  - "kiali.local"  # domain
  gateways:
  - istio-system/shared-gateway  # define gateway(namespace/gateway-name)
  http:
  - match:
    - uri:
        prefix: "/"  # root Prefix
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local  # full DNS service (service-name.namespace.svc.cluster.local)
        port:
          number: 20001
